@@ -1,3 +1,15 @@
+2011-04-11  Matthew Delaney  <mdelaney@apple.com>
+
+        Reviewed by Dan Bernstein.
+
+        [CG] drawImage with a subimage bleeds pixel data at borders
+        https://bugs.webkit.org/show_bug.cgi?id=58267
+
+        Test: fast/canvas/DrawImageSinglePixelStretch.html
+
+        * platform/graphics/cg/ImageCG.cpp:
+        (WebCore::BitmapImage::draw): Any interpolation quality other than 'none' will graft out the subimage first now.
+
 2011-04-11  Chris Marrin  <cmarrin@apple.com>
 
         Reviewed by Simon Fraser.
