@@ -1,3 +1,13 @@
+2011-04-11  Matthew Delaney  <mdelaney@apple.com>
+
+        Reviewed by Dan Bernstein.
+
+        [CG] drawImage with a subimage bleeds pixel data at borders
+        https://bugs.webkit.org/show_bug.cgi?id=58267
+
+        * fast/canvas/DrawImageSinglePixelStretch.html: Added test case.
+        * fast/canvas/resources/orangePixels.gif: Added.
+
 2011-04-11  Chris Marrin  <cmarrin@apple.com>
 
         Reviewed by Simon Fraser.
